5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1756_1580.log
== TEST (2019-05-28 21:52:55) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:54:53) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:54:56) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- EXECUTION TIME:
0.399299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 19, in <module>
    if(vetor[i] != -1):
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:59:36) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
presentes = aprovados+reprovados
media = soma/presentes
nome = vetor2[pos]
print(faltas)
print(aprovados)
print(reprovados)
print(round(media,2))
print(nome)
-- EXECUTION TIME:
0.443931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 19, in <module>
    if(vetor[i] != -1):
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:59:58) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
presentes = aprovados+reprovados
media = soma/presentes
nome = vetor2[pos]
print(faltas)
print(aprovados)
print(reprovados)
print(round(media,2))
print(nome)
-- EXECUTION TIME:
0.46538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 19, in <module>
    if(vetor[i] != -1):
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:00:07) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
presentes = aprovados+reprovados
media = soma/presentes
nome = vetor2[pos]
print(faltas)
print(aprovados)
print(reprovados)
print(round(media,2))
print(nome)
-- EXECUTION TIME:
0.333355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 19, in <module>
    if(vetor[i] != -1):
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:04:00) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- EXECUTION TIME:
0.03265
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:04:04) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:04:46) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:05:34) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:12:37) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor1[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:12:45) 
-- CODE:
from numpy import*
vetor1 = array(eval(input("notas: ")))
vetor2 = array(eval(input("nomes: ")))
i=0
n=size(vetor1)
faltas=0
aprovados=0
reprovados=0
soma=0
maior= max(vetor1)
pos=0
while(i<n):
	if(vetor1[i]<0):
		faltas=faltas+1
	if(vetor1[i]>=6):
		aprovados=aprovados+1
	if(vetor1[i]<6 and vetor1[i] != -1):
		reprovados=reprovados+1
	if(vetor1[i] != -1):
		soma = soma + vetor1[i]
	if(vetor1[i] == maior):
		pos = i
	i = i+1
	
		


-- EXECUTION TIME:
0.629398
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:31:13) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)

-- EXECUTION TIME:
0.454177
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
